--- a/docker/images/php8_3-webserver/Dockerfile
+++ b/docker/images/php8_3-webserver/Dockerfile
@@ -4,7 +4,7 @@ RUN apt update
 RUN apt -y install ffmpeg iproute2 git sqlite3 libsqlite3-dev python3 python3-dev ca-certificates dnsutils \
                    tzdata zip tar curl build-essential libtool iputils-ping libnss3 tini wget make libsqlite3-dev \
                    libonig-dev libxml2-dev libcurl4-openssl-dev libjpeg-dev libpng-dev libxpm-dev libmariadb-dev \
-                   libpq-dev libicu-dev libfreetype6-dev libldap2-dev libxslt-dev libssl-dev libldb-dev
+                   libpq-dev libicu-dev libfreetype6-dev libldap2-dev libxslt-dev libssl-dev libldb-dev php8.3
 
 RUN useradd -m -d /home/container container
 
